# developer-framework

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.pypi.md  package-lock.json  package.json  pyproject.toml  setup.py  test.json  test.txt  test2.json  vite.config.js  webpack.config.js
.github/: pull_request_template.md
.github/scripts/: release_notes_check.py
.github/workflows/: ai_explain.py  ai_explain.yaml  docs.yaml  integration.yaml  markdown-docs.yaml  prod_patches_to_main.yaml  pypi.yaml  python.yaml  release_notes_check.yaml  release_prod.yaml
docs/: api.rst  conf.py  data_validation_tests.rst  test_plans.rst  vm_models.rst
docs/_build/: index.html  search.js  validmind.html
docs/templates/: custom.css  module.html.jinja2
gradio_apps/: README.md  prompt_demo.py
gui_src/: ShadowRootWrapper.jsx  index.js  index.jsx  py_types.py  types.ts
gui_src/components/: ChatInterface.jsx  DataTable.jsx  GridComponent.jsx  MarkdownEditor.jsx
gui_src/theme/: index.js
notebooks/: DisplayTemplate.ipynb  Quickstart_Customer Churn_full_suite.ipynb  README.md  Untitled.ipynb  accessing_test_plan_results.ipynb  cre_rate_model_demo.ipynb  create_custom_test.ipynb  data_quality_tests.ipynb  explore_x_train_lc.ipynb  external_test_providers_demo.ipynb  health_insurance.ipynb  helpers.py  intro-r.ipynb  intro.ipynb  isolation_forest_test_demo.ipynb  large_language_model_demo.ipynb  lending_club.ipynb  lending_club_regression.ipynb  library_full_demo.ipynb  library_intro_demos.ipynb  listing-and-loading-tests.ipynb  log_image.ipynb  migration_demo.ipynb  model_diagnosis_test_plan.ipynb  passing_data.ipynb  quickstart.ipynb  quickstart_classification.ipynb  quickstart_classification_full_suite.ipynb  quickstart_customer_churn_full_suite.ipynb  quickstart_regression_full_suite.ipynb  refactor_dataset_demo.ipynb  run_individual_tests.ipynb  scatter_plots.ipynb  send_custom_metrics.ipynb  send_custom_results.ipynb  support_sandbox.ipynb  test algorithms.ipynb  test-config.ipynb  test-provider.ipynb  test.ipynb  (+8 more)
notebooks/POC/: bert-embeddings-model-ow-poc.ipynb
notebooks/code_samples/: intro_for_model_developers.ipynb  quickstart_customer_churn_full_suite.ipynb
notebooks/code_sharing/: notebook-template.ipynb  passing_data.ipynb  support_polars_dataset.ipynb  test_configuration_updates_demo.ipynb
notebooks/datasets/: lending_club_loan_rates.csv
notebooks/dev_help/: explore_test_suites_test_plans_and_tests.ipynb  run_a_specific_test.ipynb  run_a_specific_test_plan.ipynb  run_a_test_suite.ipynb
notebooks/external_tests/: end_to_end_isolation_forest_external.ipynb  jpmc_test_providers_demo.ipynb
notebooks/how_to/: configure_dataset_features.ipynb  configure_parameters_demo.ipynb  configure_test_parameters.ipynb  define_metrics_v2.ipynb  document_multiple_results_for_the_same_test.ipynb  explore_test_suites.ipynb  explore_test_suites_and_tests.ipynb  explore_test_suites_test_plans_and_tests.ipynb  explore_tests.ipynb  filter_input_columns.ipynb  implementing_custom_tests.ipynb  listing-and-loading-tests.ipynb  load_datasets_predictions.ipynb  run_a_template.ipynb  run_a_test.ipynb  run_a_test_plan.ipynb  run_a_test_suite.ipynb  run_documentation_sections.ipynb  run_documentation_tests_with_config.ipynb  run_documentation_with_config.ipynb  run_tests_that_require_multiple_datasets.ipynb  run_unit_metrics.ipynb  use_dataset_model_objects.ipynb  using_custom_inputs.ipynb
notebooks/insurance_mortality/: insurance_validation_demo.ipynb  validmind_insurance_POC.ipynb  validmind_insurance_POC_2.ipynb
notebooks/llm/: foundation_models_integration_demo.ipynb  foundation_models_summarization_bias_demo.ipynb  foundation_models_summarization_demo.ipynb  foundation_models_summarization_high_code.ipynb  foundation_models_summarization_toxicity_poc.ipynb  hugging_face_integration_demo.ipynb  hugging_face_summarization_demo.ipynb  hugging_face_text_continuation_poc.ipynb  multiclass_classification_support.ipynb  native_sdk_support_for_foundation_models.ipynb  prompt_validation_demo.ipynb  prompt_validation_template.yaml  summarization_bias_toxicity_safety_poc.ipynb
notebooks/nlp/: nlp_sentiment_analysis_catboost.ipynb  nlp_sentiment_analysis_catboost_demo.ipynb  nlp_sentiment_analysis_demo.ipynb
notebooks/probability_of_default/: credit_risk_scorecard_demo.ipynb  credit_risk_scorecard_demo_v2.ipynb  credit_risk_scorecard_demo_v3.ipynb  credit_risk_scorecard_development_demo.ipynb  credit_risk_scorecard_validation_demo.ipynb  credit_scorecard_demo.ipynb  economic_model_development.ipynb  economic_model_validation.ipynb  lifetime_pd_model_poc.ipynb  macro_to_micro_model_demo.ipynb  macroeconomic_model_validation.ipynb  model_risk_assessment_poc.ipynb  pd_data_validation_poc.ipynb  (+2 more)
r/: custom_tests.py  helpers.R
scripts/: README.md  add_test_description.py  check_tests.py  convert_ts_to_pydantic.py  copyright.txt  copyright_files.py  create-new-test.py  create_new_test.py  create_repo_context.py  credentials_check.py  ensure_clean_notebooks.py  extract_descriptions.py  fix_test_descriptions.py  format_and_add.sh  full_suite_test.py  generate_test_id_type.py  jeffreys_test.py  load_lending_club.py  load_lending_club_ead.py  load_lending_club_pd.py  quickstart_classification_full_suite.py  render_public_notebooks.py  run_e2e_notebooks.py  run_integration_tests.py  update_test_prop.py  verify_copyright.py
streamlit/: app.py  model.json  raw.csv  test.csv  train.csv  validation.csv
tests/: run_test_utils.py  test_api_client.py  test_api_client_sync.py  test_client.py  test_dataset.py  test_framework_init.py  test_full_suite.py  test_full_suite_nb.py  test_run_all_tests.py  test_validmind_tests.py  test_validmind_tests_module.py  vm_tests_harness.py
validmind/: __init__.py  __version__.py  ai.py  api_client.py  api_client_async.py  client.py  client_config.py  dataset.py  dataset_utils.py  errors.py  input_registry.py  logging.py  model.py  model_evaluation.py  model_metrics.py  model_utils.py  statsutils.py  template.py  type_utils.py  utils.py
(+1131 files in other folders)
