[tool.poetry]
authors = [
  "Andres Rodriguez <andres@validmind.ai>",
  "Juan Martinez <juan@validmind.ai>",
  "Anil Sorathiya <anil@validmind.ai>",
  "Luis Pallares <luis@validmind.ai>",
  "John Halz <john@validmind.ai>",
]
description = "ValidMind Developer Framework"
license = "Commercial License"
name = "validmind"
readme = "README.pypi.md"
version = "1.22.8"

[tool.poetry.dependencies]
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
arch = "^5.4.0"
bert-score = "^0.3.13"
catboost = "^1.2"
click = "^8.0.4"
datasets = {version = "^2.14.5", optional = true}
dython = "^0.7.1"
evaluate = "^0.4.0"
ipython = "7.34.0"
ipywidgets = "^8.0.6"
kaleido = "0.2.1"
langdetect = "^1.0.9"
levenshtein = {version = "^0.21.1", optional = true}
markdown = "^3.4.3"
matplotlib = "<3.8"
nltk = "^3.8.1"
numpy = "1.22.3"
openai = {version = "^0.27.8", optional = true}
pandas = "1.5.3"
pandas-profiling = "^3.6.6"
pdoc = "^13.1.1"
plotly = "^5.14.1"
plotly-express = "^0.4.1"
pycocoevalcap = {version = "^1.2", optional = true}
pydantic = "^1.9.1"
pypmml = "^0.9.17"
python = ">=3.8,<3.11"
python-dotenv = "^0.20.0"
requests = "^2.27.1"
rouge = "^1.0.1"
rpy2 = {version = "^3.5.10", optional = true}
scikit-learn = "^1.0.2"
scorecardpy = "^0.1.9.6"
seaborn = "^0.11.2"
sentencepiece = "^0.1.99"
sentry-sdk = "^1.24.0"
shap = "^0.41.0"
statsmodels = "^0.13.5"
tabulate = "^0.8.9"
textstat = "^0.7.3"
torch = {version = ">=1.10.0", optional = true}
torchmetrics = {version = "^1.1.1", optional = true}
tqdm = "^4.64.0"
transformers = "^4.32.0"
wget = "^3.2"
xgboost = "^1.5.2"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
click = "^8.1.3"
cython = "^0.29.34"
flake8 = "^4.0.1"
gradio = "^3.43.2"
ipykernel = "^6.22.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
jupyterlab = "^3.6.3"
openai = "^0.27.8"
papermill = "^2.4.0"
pre-commit = "^3.3.3"
pytest = "^5.2"
sphinx = "^6.1.3"
sphinx-markdown-builder = "^0.5.5"
sphinx-rtd-theme = "^1.2.0"
twine = "^4.0.2"

[tool.poetry.extras]
all = [
  "openai",
  "rpy2",
  "torch",
  "transformers",
  "pycocoevalcap",
  "torchmetrics",
  "levenshtein",
  "datasets",
]
llm = [
  "torch",
  "transformers",
  "openai",
  "pycocoevalcap",
  "torchmetrics",
  "levenshtein",
  "datasets",
]
pytorch = ["torch"]
r-support = ["rpy2"]
transformers = ["transformers"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
known_first_party = "validmind"
profile = "black"
