[tool.poetry]
authors = [
  "Andres Rodriguez <andres@validmind.ai>",
  "Juan Martinez <juan@validmind.ai>",
  "Anil Sorathiya <anil@validmind.ai>",
  "Luis Pallares <luis@validmind.ai>",
  "John Halz <john@validmind.ai>",
]
description = "ValidMind Developer Framework"
license = "Commercial License"
name = "validmind"
readme = "README.pypi.md"
version = "2.2.2"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
arch = "^5.4.0"
bert-score = "^0.3.13"
catboost = "^1.2"
click = "^8.0.4"
evaluate = "^0.4.0"
ipywidgets = "^8.0.6"
kaleido = "^0.2.1,!=0.2.1.post1"
langdetect = "^1.0.9"
latex2mathml = "^3.77.0"
levenshtein = {version = "^0.21.1", optional = true}
llvmlite = [
  {version = "*", python = ">=3.8,<=3.11"},
  {version = ">=0.42.0", python = ">=3.12"},
]
matplotlib = "<3.8.3"
mistune = "^3.0.2"
nltk = "^3.8.1"
numba = "<0.59.0" # TODO: https://github.com/validmind/developer-framework/pull/28
numpy = [
  {version = "^1.23.3", python = ">=3.8,<=3.11"},
  {version = ">=1.26.0", python = ">=3.12"},
]
openai = {version = "^1.3.7", optional = true}
pandas = ">=1.1,<2" # TODO small issues blocking 2.0 but it would speed things up to use arrow backend
plotly = "^5.14.1"
plotly-express = "^0.4.1"
polars = "^0.20.15"
pycocoevalcap = {version = "^1.2", optional = true}
pypmml = "^0.9.17"
python-dotenv = "^0.20.0"
ragas = "^0.1.7"
rouge = "^1.0.1"
rpy2 = {version = "^3.5.10", optional = true}
scikit-learn = "^1.0.2"
scipy = [
  {version = "*", python = ">=3.8,<=3.11"},
  {version = ">=1.12", python = ">=3.12"},
]
scorecardpy = "^0.1.9.6"
seaborn = "^0.11.2"
selfcheckgpt = "^0.1.7"
sentry-sdk = "^1.24.0"
shap = "^0.42.0"
statsmodels = "^0.13.5"
tabulate = "^0.8.9"
textblob = "^0.18.0.post0"
textstat = "^0.7.3"
torch = {version = ">=1.10.0", optional = true}
torchmetrics = {version = "^1.1.1", optional = true}
tqdm = "^4.64.0"
transformers = {version = "^4.32.0", optional = true}
xgboost = ">=1.5.2,<3"
ydata-profiling = "^4.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
click = "^8.1.3"
cython = "^0.29.34"
flake8 = "^4.0.1"
gradio = "^3.43.2"
ipykernel = "^6.22.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
openai = "^1.3.7"
papermill = "^2.4.0"
pdoc = "^14.4.0"
pre-commit = "^3.3.3"
pytest = "^5.2"
sphinx = "^6.1.3"
sphinx-markdown-builder = "^0.5.5"
sphinx-rtd-theme = "^1.2.0"
twine = "^4.0.2"

[tool.poetry.extras]
all = [
  "openai",
  "rpy2",
  "torch",
  "transformers",
  "pycocoevalcap",
  "torchmetrics",
  "levenshtein",
]
llm = [
  "torch",
  "transformers",
  "openai",
  "pycocoevalcap",
  "torchmetrics",
  "levenshtein",
]
pytorch = ["torch"]
r-support = ["rpy2"]
transformers = ["transformers"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
known_first_party = "validmind"
profile = "black"

[tool.poetry.scripts]
vm-create-new-test = "scripts.create_new_test:generate_test"
