[tool.poetry]
authors = [
  "Andres Rodriguez <andres@validmind.ai>",
  "Juan Martinez <juan@validmind.ai>",
  "Anil Sorathiya <anil@validmind.ai>",
  "Luis Pallares <luis@validmind.ai>",
  "John Halz <john@validmind.ai>",
]
description = "ValidMind Developer Framework"
license = "Commercial License"
name = "validmind"
readme = "README.pypi.md"
version = "2.5.15"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
aiohttp = {extras = ["speedups"], version = "*"}
arch = "*"
bert-score = ">=0.3.13"
catboost = "*"
evaluate = "*"
ipywidgets = "*"
kaleido = ">=0.2.1,!=0.2.1.post1"
langchain-openai = {version = ">=0.1.8", optional = true}
langdetect = "*"
latex2mathml = ">=3.77.0"
llvmlite = {version = "*", python = ">=3.8,<=3.11"}
matplotlib = "*"
mistune = "^3.0.2"
nest-asyncio = "^1.6.0"
nltk = "^3.8.1"
numba = "<0.59.0" # TODO: https://github.com/validmind/developer-framework/pull/28
numpy = "*"
openai = ">=1"
pandas = ">=1.1,<2" # TODO: small issues blocking 2.0 but it would speed things up to use arrow backend
plotly = "*"
plotly-express = "*"
polars = "*"
pycocoevalcap = {version = "^1.2", optional = true}
python-dotenv = "*"
ragas = {version = ">=0.1.7", optional = true}
rouge = ">=1"
rpy2 = {version = "^3.5.10", optional = true}
scikit-learn = "*"
scipy = "*"
scorecardpy = "^0.1.9.6"
seaborn = "*"
sentencepiece = {version = "^0.2.0", optional = true}
sentry-sdk = "^1.24.0"
shap = "0.44.1"
statsmodels = "*"
tabulate = "^0.8.9"
textblob = "^0.18.0.post0"
torch = {version = ">=1.10.0", optional = true}
tqdm = "*"
transformers = {version = "^4.32.0", optional = true}
xgboost = ">=1.5.2,<3"
ydata-profiling = "*"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
click = "*"
cython = "^0.29.34"
flake8 = "^4.0.1"
ipykernel = "^6.22.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
papermill = "^2.4.0"
pdoc = "^14.4.0"
pre-commit = "^3.3.3"
sphinx = "^6.1.3"
sphinx-markdown-builder = "^0.5.5"
sphinx-rtd-theme = "^1.2.0"
twine = "^4.0.2"

[tool.poetry.extras]
all = [
  "rpy2",
  "torch",
  "transformers",
  "pycocoevalcap",
  "ragas",
  "sentencepiece",
  "langchain-openai",
]
huggingface = ["transformers", "sentencepiece"]
llm = [
  "torch",
  "transformers",
  "pycocoevalcap",
  "ragas",
  "sentencepiece",
  "langchain-openai",
]
pytorch = ["torch"]
r-support = ["rpy2"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
known_first_party = "validmind"
profile = "black"

[tool.poetry.scripts]
vm-create-new-test = "scripts.create_new_test:generate_test"
